* Changelog

** Unreleased

** v2.3.0 2025-06-12

Introduces *Emacs 29* features support.

Includes numerous usability adjustments.
Adds package =gptel= -- a LLM chat client.

*** Added
- Global keybinding =C-c f r= to call ~rename-visited-file~ (Emacs 29.1).
- Enable =pixel-scroll-precision-mode= (since Emacs 29.1).
- Global keybinding =C-c e r= to call ~restart-emacs~ (Emacs 29.1).
- Global keybinding =C-c e q= to call ~yet-kill-emacs-reset-desktop~.
- Advice ~yet-org-export-to-tmp-dir~ uses temporary directory by default.
- Enable =web-mode-enable-current-column-highlight= to highlight matching pair
  of tags.
- New optional constant ~yet-org-noob~.
- =org-mode-map= keybinding =C-c o l= to call =org-store-link=.
- Function ~yet-org-unfill~ to unfill elements, bound to =C-M-q=.
- Function ~yet-org-export-output-file-name-toggle~ (=C-c o e= in =org-mode=).
- Enable =undelete-frame-mode= that provides function ~undelete-frame~.
- Enable =winner-mode= that records changes in window configuration.
- Package =gptel=: a Large Language Model (e.g., ChatGPT) chat client.
- Function ~yet-toggle-window-split~, globally bound to =C-c b s=.
- In =org-mode= buffers, open a link by hitting =RET=.
- Package =org-contrib=: enable add-on =ox-extra= to ignore headlines.
- Function ~yet-vc-print-root-log-latest~ bound to =C-c v L= in =vc-dir-mode=.
- Enable =hs-minor-mode= in programming modes for blocks folding.
- Add ~wip~ abbreviation to =rust-mode= for disabling WIP code warnings.
- Set default PostgreSQL settings with =sql-postgres-login-params=.
- Use package =exec-path-from-shell= instead of ~yet-exec-path~.

*** Changed
- Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
- Rename ~yet-kill-emacs-reset-desktop-state~ to ~yet-kill-emacs-reset-desktop~.
- Disable confusing =org-mode= keybindings only if ~yet-org-noob~ is enabled.
- Set user option =org-export-headline-levels= value to 5.
- Disable =org-html-validation-link=.