@@ -4,7 +4,9 @@
  ;; Your init file should contain only one such instance.
  ;; If there is more than one, they won't work right.
  '(package-selected-packages
-   '(exec-path-from-shell org-contrib gptel imenu-list fish-mode racket-mode web-mode htmlize pdf-tools eglot company diff-hl rainbow-mode debbugs php-mode rust-mode markdown-mode)))
+   '(company debbugs diff-hl eglot exec-path-from-shell fish-mode gptel htmlize
+             imenu-list markdown-mode org-contrib pdf-tools php-mode racket-mode
+             rainbow-mode rust-mode vterm web-mode)))
 (custom-set-faces
  ;; custom-set-faces was added by Custom.
  ;; If you edit it by hand, you could mess it up, so be careful.
